@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.524 2007/08/22 14:07:30 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.525 2007/08/22 14:20:28 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -87,6 +87,10 @@ PH/18 If a system quota error occurred while trying to create the file for
       a maildir delivery, the message "Mailbox is full" was not appended to the
       bounce if the delivery eventually timed out. Change 4.67/27 below applied
       only to a quota excession during the actual writing of the file.
+
+PH/10 It seems that peer DN values may contain newlines (and other non-printing
+      characters?) which causes problems in log lines. The DN values are now
+      passed through string_printing() before being added to log lines.
 
 
 Exim version 4.67
